tests/compilefail40.out
[1mtests/compilefail40.pas:15:10: [0m[1m[91merror:[0m Cannot compare types 'char' and 'transport' with relational operator
    15 | 	if c > q then